BusOne/src/objects/Inventory_Monitoring_Line_vod__c.object
<CustomObject>
    <description>The Inventory Monitoring Line is a child of Inventory Monitoring. It holds information about a particular product and data captured at an account.</description>
    <fields>
        <fullName>Added_From_Photo_vod__c</fullName>
        <description>Used to identify if the IM Line is associated to the Parent or a particular Child IM record:
            If the Inventory_Monitoring.Photo_Rank_vod__c is blank, then Added_From_Photo_vod__c= blank, which indicates that this Line is associated to the Parent IM
            If the Inventory_Monitoring.Photo_Rank_vod__c is populated, then stamp its rank value in the Added_From_Photo_vod__c field. The stamped value will indicate in which child section this IM Line belongs</description>
        <label>Added From Photo?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consumer_Price_vod__c</fullName>
        <description>Price consumers are charged for products at the pharmacy.</description>
        <label>Consumer Price</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facings_horizontal_vod__c</fullName>
        <description>Number of Facings visible in the shelf on the horizontal axis .</description>
        <label>Horizontal</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facings_simple_vod__c</fullName>
        <description>Amount of shelf space, in terms of product units quantity, a particular product is given at retail location.</description>
        <label>Facings</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facings_vertical_vod__c</fullName>
        <description>Number of Facings visible in the shelf on the vertical axis.</description>
        <label>Vertical</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Monitoring_vod__c</fullName>
        <description>The Inventory Monitoring that the line item belongs to.</description>
        <label>Inventory Monitoring</label>
        <referenceTo>Inventory_Monitoring_vod__c</referenceTo>
        <relationshipLabel>Inventory Monitoring Lines</relationshipLabel>
        <relationshipName>Inventory_Monitoring_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Inventory_vod__c</fullName>
        <description>Quantity of product in stock at the pharmacy.</description>
        <label>Inventory</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Layer_vod__c</fullName>
        <description>The visibility layer the facings are seen (eye level, above eye level, below eye level). Customers can add values to this picklist.</description>
        <label>Layer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Above_eye_level</fullName>
                </value>
                <value>
                    <fullName>Eye_level</fullName>
                </value>
                <value>
                    <fullName>Below_eye_level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Moved_Goods_vod__c</fullName>
        <description>Quantity of product that was moved between two documented pharmacy stocks (turnover).</description>
        <label>Moved Goods</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position_vod__c</fullName>
        <description>Position of the product on the shelf/counter (Front of Counter, Back of Counter, Open Shelf). Customer can add values to this picklist.</description>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Front_of_counter</fullName>
                </value>
                <value>
                    <fullName>Back_of_counter</fullName>
                </value>
                <value>
                    <fullName>Open_shelf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Identifier_vod__c</fullName>
        <description>This is a pull-in field that allows the display of the Product Identifier field from the Product Catalog object on Inventory Monitoring Lines.</description>
        <label>Product Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product the Inventory Monitoring Line item is referring to.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Inventory Monitoring Lines</relationshipLabel>
        <relationshipName>Inventory_Monitoring_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>U_M_vod__c</fullName>
        <description>Unit of Measurement for the line item being monitored.</description>
        <label>U/M</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Modified_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flags if line was modified by user</description>
        <label>User Modified</label>
        <type>Checkbox</type>
    </fields>
    <label>Inventory Monitoring Line</label>
    <nameField>
        <displayFormat>IML-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Monitoring Lines</pluralLabel>
    <recordTypes>
        <fullName>Inventory_Monitoring_vod</fullName>
        <active>false</active>
        <description>Base record type for Inventory Monitoring Lines</description>
        <label>Inventory Monitoring</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>